# XLC-Assistant

./: .gitignore  AssistantPage.py  BaseWidget.py  CMakeLists.txt  CentralWidgetChat.py  ConfigManager.py  DeepSeekApiManager.py  DialogSettings.py  EventBus.py  LICENSE  LLMController.py  LLMService.py  ListChat.py  MainWindow.py  MessageList.py  NavigationBar.py  PageAgent.py  PageChat.py  PageContainer.py  PageLLM.py  README.md  Singleton.py  SvgManager.py  UserInputEdit.py  config.json  main.py  main_old.py  pyproject.toml  tools.py  开发文档.md
components/: NavigationBar.py
include/: AgentListWidget.h  AntMessage.h  AntMessageManager.h  BaseDialog.hpp  BaseSettingsPage.hpp  BaseWidget.hpp  BorderDebugger.hpp  CMessageListWidget.h  CNavigationBar.h  CheckBoxStyleHelper.h  ColorRepository.h  ComboBoxStyleHelper.h  DataBaseManager.h  DataManager.h  EventBus.h  FlowLayout.h  GroupBoxStyleHelper.h  HistoryMessageListWidget.h  ItemViewItemStyleHelper.h  LLMService.h  LineEditStyleHelper.h  ListViewStyleHelper.h  Logger.hpp  MCPGateway.h  MCPService.h  MainWindow.h  MenuStyleHelper.h  ModelService.h  NavigationBar.h  PageChat.h  PageSettings.h  PainterHelper.h  PlainTextEditStyleHelper.h  PushButtonStyleHelper.h  ScrollBarStyleHelper.h  Singleton.h  SpinBoxStyleHelper.h  TabBarStyleHelper.h  ToastManager.h  XlcNavigationBar.h  (+2 more)
lib/cpp-mcp/: CMakeLists.txt
lib/cpp-mcp/src/: mcp_sse_client.cpp  mcp_stdio_client.cpp
mcp/: mcp_main.py  tools.py
output/: config.ini  xlc_assistant.db
output/config/: Agents.json  LLMs.json  MCPServers.json  dev_随机挂载llm.py  dev_随机挂载mcp.py
res/: resources.qrc
src/: AgentListWidget.cpp  AntMessage.cpp  AntMessageManager.cpp  CMessageListWidget.cpp  CNavigationBar.cpp  CheckBoxStyleHelper.cpp  ColorRepository.cpp  ComboBoxStyleHelper.cpp  DataBaseManager.cpp  DataManager.cpp  EventBus.cpp  FlowLayout.cpp  GroupBoxStyleHelper.cpp  HistoryMessageListWidget.cpp  ItemViewItemStyleHelper.cpp  LLMService.cpp  LineEditStyleHelper.cpp  ListViewStyleHelper.cpp  MCPGateway.cpp  MCPService.cpp  MainWindow.cpp  MenuStyleHelper.cpp  ModelService.cpp  NavigationBar.cpp  PageChat.cpp  PageSettings.cpp  PainterHelper.cpp  PlainTextEditStyleHelper.cpp  PushButtonStyleHelper.cpp  ScrollBarStyleHelper.cpp  SpinBoxStyleHelper.cpp  TabBarStyleHelper.cpp  ToastManager.cpp  XlcNavigationBar.cpp  XlcStyle.cpp  agent_example.cpp  agent_without_mcp_server.cpp  main.cpp
